1.0.0-rc2
====================

 * Fixed http://members.plone.org/collector/4321 which was caused by three
   distinct bugs. 1) The initial rename of the CMF object didn't preserve
   order, but rather moved the object to the end of the list.  2) When
   migrating folders the check for orderability on self.new always failed
   because self.new is None at this point, so ordering wasn't attempted.
   3) When going through the subobjects of a folder the position was noted,
   and then the object deleted, the next object was now in the same position
   as the prior one and the order was lost.  Now there is a seperate loop to
   delete the objects after the loop which marks the order and preserves the
   object.
   [alecm]

 * Fixed some minor issues with the relative url and CMF uid handling in
   ATFavorite.
   [tiran]

 * Added AT and CMF uid migration to the migration system.
   [tiran]

 * Fixed the unit test fixture and ATFavorite unit tests. Now tests aren't
   running as Manager only when really needed.
   [tiran]

1.0.0-rc1 2005-07-23
====================

 * Fixed error in version parsing which somehow made portal_types disappear.
   [alecm]

 * Enabled swallowResizeExceptions by default and added warning that original
   image resizing destroies the exif information before the data is saved.
   [tiran]
 
 * Fixed spelling error in a security declaration of ATTopic.
   [tiran]

 * Fixed critical migration issue. Locally added roles and locally changed
   permissions are now migrated. Also added unit tests to verify the 
   migration.
   [tiran]

 * Cleanup up unit tests and logging to reduce the noise
   [tiran]

 * Removed 'MakerNote JPEGThumbnail' from the exif tags. Some cameras might
   store the thumbnail in this tag.
   [tiran]

 * Removed unused customization policy including unit test. Plone 2.1 always
   installing ATCT.
   [tiran]

 * Fixed 4330 Inter-version ATCT migration fails to migrate types