@@ -1,6 +1,12 @@
 1.0.0-rc2
 ====================
 
+ * Added workaround for broken WebDAV/FTP clients like Mac OS X Finder.
+   PUT_factory is patched to use the default_PUT_factory which creates
+   standard Zope objects instead of CMF/AT content objects.
+   Thx to Nate and ATAudio for the idea.
+   [tiran]
+
  * Fixed http://members.plone.org/collector/4321 which was caused by three
    distinct bugs. 1) The initial rename of the CMF object didn't preserve
    order, but rather moved the object to the end of the list.  2) When
